<resources>
    <string name="app_name">Pzplayv1</string>

    <string name="btn_registrarse">REGISTRAR</string>
    <string name="btn_acceder">ACCEDER</string>
    <string name="TxVw_email">Correo</string>
    <string name="TxVw_password">Contraseña</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="TxVw_provider">Proveedor</string>
    
    <string name="prefs_file">com.xoco96.pzplayv1.PREFERENCE_FILE_KEY</string>
</resources>